# gensim-playground

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: __init__.py
src/python_3/: main.py
